# auth0-assistant0

./: .gitignore
py-langchain/: README.md
py-langchain/backend/app/api/routes/: chat.py  documents.py
py-langchain/backend/app/core/: fga.py
py-langchain/frontend/: package-lock.json
py-langchain/frontend/src/components/: layout.tsx
py-llamaindex/: README.md
py-llamaindex/backend/: .env.example  README.md  pyproject.toml
py-llamaindex/backend/app/: main.py
py-llamaindex/backend/app/agents/: assistant0.py
py-llamaindex/backend/app/agents/tools/: context_docs.py  gmail.py  google_calendar.py  list_gh_events.py  list_gh_repos.py  list_slack_channels.py  serpapi.py  shop_online.py  user_info.py
py-llamaindex/backend/app/api/: api_router.py
py-llamaindex/backend/app/api/routes/: chat.py  documents.py  user.py
py-llamaindex/backend/app/core/: auth0_ai.py  config.py  fga.py  fga_init.py  rag.py  schema.fga
py-llamaindex/backend/app/models/: embeddings.py
py-llamaindex/frontend/: package-lock.json  package.json  vite.config.ts
py-llamaindex/frontend/src/components/: TokenVaultInterruptHandler.tsx  chat-message-bubble.tsx  chat-window.tsx  layout.tsx
py-llamaindex/frontend/src/components/auth0/: user-button.tsx
py-llamaindex/frontend/src/lib/: use-auth.ts
py-llamaindex/frontend/src/pages/: ChatPage.tsx  ProfilePage.tsx
ts-langchain/: package-lock.json  package.json
ts-langchain/src/lib/: agent.ts  auth.ts  auth0-ai.ts
ts-langchain/src/lib/tools/: google-calender.ts  list-gh-repos.ts
(+2 files in other folders)
