[project]
name = "backend"
version = "0.1.0"
description = "Assistant0: An AI Personal Assistant Secured with Auth0 - LlamaIndex Python/FastAPI Version"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "auth0-ai>=1.0.2",
    "auth0-ai-llamaindex>=1.0.1",
    "auth0-fastapi>=1.0.0b5",
    "fastapi[standard]>=0.115.14",
    "google-api-python-client>=2.176.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "llama-index>=0.12.0",
    "llama-index-llms-openai>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "openfga-sdk>=0.9.5",
    "pypdf2>=3.0.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.2.3",
    "slack-sdk>=3.27.0",
    "PyGithub>=2.3.0",
]
